# trenatra_backend

./: .gitignore  README.md  create_db.py  pyproject.toml  sample.env
.github/workflows/: deploy.yml
app/: database.py  main.py  security.py  settings.py
app/models/: __init__.py  models.py
app/routers/: auth.py
