[project]
name = "tenatra-backend"
version = "0.1.0"
description = "Backend for tenatra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
